fixed so that footer is not visible on the contact page

--- a/src/App.css
+++ b/src/App.css
@@ -104,5 +104,9 @@ line {
 }
 
 .mainContent {
+    width: 100%;
+    height: 100%;
     margin-top: 6rem;
+    display: flex;
+    flex-direction: column;
 }
