--- a/src/Components/ContactPage/ContactPage.css
+++ b/src/Components/ContactPage/ContactPage.css
@@ -1,5 +1,11 @@
 .contactPageContainer {
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    box-sizing: border-box;
+    min-height: calc(100vh - 12rem);
+    margin-bottom: 6rem;
 }
 
 .contactPage {
@@ -9,10 +15,9 @@
     flex-direction: column;
     gap: 1rem;
     
+    box-sizing: border-box;
     width: max-content;
     padding: 1rem 10rem 2rem 3rem;
-
-    margin-top:35vh;
     margin-left: 10vw;
 }
 
@@ -45,4 +50,13 @@
 
 .contactHeader img {
     height: 3rem;
+}
+
+@media screen and (max-width: 650px) {
+    .contactPage {
+        width: 100%;
+        padding-inline: 4rem;
+        margin: 0;
+
+    }
 }
